chore: add utils/__pycache__ to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ code_from_notebook.md
 /sycophancy_analysis/__pycache__
 .windsurf/rules/specs-driven-development.md
 AGENTS.md
+utils/__pycache__/score_metrics_from_combined.cpython-311.pyc
+utils/__pycache__/score_metrics_from_combined.cpython-311.pyc
